adicionando GETID
