# project/docs/swagger.yaml
@@ -93,31 +93,6 @@ paths:
             $ref: '#/definitions/web.Response'
       tags:
       - users
-    patch:
-      consumes:
-      - application/json
-      description: Update user name
-      parameters:
-      - description: token
-        in: header
-        name: token
-        required: true
-        type: string
-      - description: Name to update
-        in: body
-        name: usuario
-        required: true
-        schema:
-          $ref: '#/definitions/handler.UpdateRequestDto'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/web.Response'
-      tags:
-      - users
     post:
       consumes:
       - application/json
@@ -154,6 +129,56 @@ paths:
         required: true
         type: string
       - description: User to store
+        in: body
+        name: usuario
+        required: true
+        schema:
+          $ref: '#/definitions/handler.UpdateRequestDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.Response'
+      tags:
+      - users
+  /usuarios/:id:
+    get:
+      consumes:
+      - application/json
+      description: get user by id
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.Response'
+      tags:
+      - users
+    patch:
+      consumes:
+      - application/json
+      description: Update user name
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: Name to update
         in: body
         name: usuario
         required: true
